<resources>
    <string name="app_name">Memo</string>

    <string name="bg">Background</string>

    <!-- MENU -->
    <string name="menu_txt_list">List</string>
    <string name="menu_txt_settings">Settings</string>

    <string name="menu_txt_text">Note</string>
    <string name="menu_txt_photo">Photo</string>
    <string name="menu_txt_audio">Voice</string>

    <!-- BUTTONS -->
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_trash">Trash</string>

    <!--RECORDING-->
    <string name="record_start">Record</string>
    <string name="record_recording">Recording...</string>
    <string name="record_pause">Pause</string>
    <string name="record_resume">Resume</string>
    <string name="record_stop">Stop</string>
    <string name="record_duration_text">Duration of Last Record:</string>
    <string name="record_mic_input">Microphone Preview</string>

    <!--SETTINGS-->
    <string name="settings_camera">Default Camera</string>
    <string name="settings_camera_front">Front</string>
    <string name="settings_camera_back">Back</string>
    <string name="settings_contribute">Contribute on Github!</string>
    <string name="settings_link">https://github.com/sjaster/memoapp</string>
    <string name="settings_version">Version - 0.2.4</string>
    <string name="settings_delete_all">Delete All Notes</string>


    <!--GENERAL PURPOSE-->
    <string name="hint_title">Title</string>
    <string name="title_activity_preview">Preview</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>

    <!--PREVIEW-->
    <string name="pv_last_modified">Last Modified</string>

    <!--LIST-->
    <string name="list_title">My Notes</string>
    <string name="list_sort">Sort</string>
    <string name="list_sort_title">Title</string>
    <string name="list_sort_date">Date</string>
    <string name="list_empty">No Notes :(</string>

    <!--LIST MENU-->
    <string name="list_menu_like">Like</string>
    <string name="list_menu_del">Delete</string>

    <string-array name="list_sort_types">
        <item>Date</item>
        <item>Name</item>
    </string-array>

    <!--START SCREEN (ss)-->
    <string name="ss_title">Notizian</string>

    <!--404-->
    <string name="frag_404_text">Android 5 Required :/</string>
</resources>
