<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_preview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.nicco.memo.memo.Preview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <ImageView
            android:id="@+id/pv_back"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_padding"
            android:adjustViewBounds="false"
            android:contentDescription="@string/btn_cancel"
            android:src="@drawable/icn_arrow_l" />

        <EditText
            android:id="@+id/pv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/hint_title"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <ImageView
            android:id="@+id/pv_like"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_padding"
            android:adjustViewBounds="false"
            android:contentDescription="@string/btn_trash" />

        <ImageView
            android:id="@+id/pv_share"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_padding"
            android:adjustViewBounds="false"
            android:contentDescription="@string/btn_trash"
            android:src="@drawable/icn_share" />

        <ImageView
            android:id="@+id/pv_trash"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_padding"
            android:adjustViewBounds="false"
            android:contentDescription="@string/btn_trash"
            android:src="@drawable/icn_trash" />

        <ImageView
            android:id="@+id/pv_save"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_padding"
            android:contentDescription="@string/btn_save"
            android:src="@drawable/icn_save" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/default_padding">

        <LinearLayout
            android:id="@+id/pv_cont_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:visibility="invisible">

            <ScrollView
                android:id="@+id/pv_text_scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding">

                <EditText
                    android:id="@+id/pv_cont_text_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:gravity="bottom"
                    android:inputType="textMultiLine"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
            </ScrollView>

            <View
                android:id="@+id/pv_text_space"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/pv_cont_audio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pv_cont_audio_cur_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <SeekBar
                    android:id="@+id/pv_cont_audio_seek"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100"
                    android:progress="1" />

                <TextView
                    android:id="@+id/pv_cont_audio_tot_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/audio_margin_bottom">

                <ImageView
                    android:id="@+id/pv_cont_audio_play"
                    android:layout_width="@dimen/shutter_size"
                    android:layout_height="@dimen/shutter_size"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/record_start" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/pv_cont_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/pv_cont_photo_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/custLightGrey"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/pv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

    </LinearLayout>
</LinearLayout>