<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.nicco.memo.memo.frag_audio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/custLightGrey"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/custWhite"
            android:padding="16dp"
            android:id="@+id/frag_audio_main">

            <Chronometer
                android:id="@+id/frag_audio_chrono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/frag_audio_tvlast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/frag_audio_chrono"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="11dp"
                android:text="@string/record_duration_text"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/frag_audio_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/frag_audio_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_padding"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="Title"
                    android:textAppearance="@android:style/TextAppearance.Material.Large" />

                <ImageView
                    android:id="@+id/frag_audio_trash"
                    android:layout_width="@dimen/ftr_icon_size"
                    android:layout_height="@dimen/ftr_icon_size"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_padding"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/btn_trash"
                    android:src="@drawable/icn_trash" />

                <ImageView
                    android:id="@+id/frag_audio_save"
                    android:layout_width="@dimen/ftr_icon_size"
                    android:layout_height="@dimen/ftr_icon_size"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_padding"
                    android:contentDescription="@string/btn_save"
                    android:src="@drawable/icn_save" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/shutter_margin_bottom">

                <ImageView
                    android:id="@+id/frag_audio_btn_stop"
                    android:layout_width="@dimen/audio_icn_size"
                    android:layout_height="@dimen/audio_icn_size"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icn_rec_stop" />

                <ImageView
                    android:id="@+id/frag_audio_btn_main"
                    android:layout_width="@dimen/shutter_size"
                    android:layout_height="@dimen/shutter_size"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icn_rec_mic" />

            </RelativeLayout>

            <View
                android:id="@+id/frag_audio_visualizer"
                android:layout_width="30dp"
                android:background="@color/custDarkGrey"
                android:padding="@dimen/default_padding"
                android:layout_height="10dp"
                android:layout_below="@+id/frag_audio_chrono"
                android:layout_alignParentStart="true" />

        </RelativeLayout>
    </LinearLayout>


</FrameLayout>
